<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ims</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_reconnect_to_server">Reconnect to server</string>
    <string name="lbl_send_text_message">Send Text Message</string>
    <string name="lbl_input_text_here">Input Text Here.</string>
    <string name="lbl_send_friend_adding_request">Send Friend Adding Request</string>
    <string name="lbl_send_group_message">Send Group Message</string>
    <string name="lbl_handle_friend_adding_request">Handle Friend Adding Request</string>
    <string name="lbl_test">test</string>
    <string name="hint_received_message">Received Message</string>
    <string name="hint_message_to_send">message to send out</string>
    <string name="lbl_reconnect">Reconnect To Server</string>
    <string name="lbl_send_voice_message">Send Voice Message</string>
    <string name="lbl_btn_audio_record">Record Voice</string>
    <string name="lbl_btn_play_audio">Play Audio</string>
    
</resources>
