<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImsMainActivity" >

    <EditText
        android:id="@+id/etMessageReceived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMessageSendOut"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_received_message" />

    <EditText
        android:id="@+id/etMessageSendOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMessageReceived"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/hint_message_to_send" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMessageSendOut"
        android:layout_below="@+id/etMessageSendOut"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_send_text_message" />

    <Button
        android:id="@+id/btnSendVoiceMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSendMessage"
        android:layout_centerVertical="true"
        android:hint="@string/lbl_send_voice_message"
        android:text="@string/lbl_send_voice_message" />

    <Button
        android:id="@+id/btnReconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnSendVoiceMessage"
        android:layout_below="@+id/btnSendVoiceMessage"
        android:hint="@string/lbl_reconnect"
        android:text="@string/lbl_reconnect_to_server" />

    <Button
        android:id="@+id/btnRecordVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReconnect"
        android:layout_alignRight="@+id/btnSendMessage"
        android:layout_below="@+id/btnReconnect"
        android:text="@string/lbl_btn_audio_record" />

    <Button
        android:id="@+id/btnPlayAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRecordVoice"
        android:layout_alignRight="@+id/btnRecordVoice"
        android:layout_below="@+id/btnRecordVoice"
        android:text="@string/lbl_btn_play_audio" />

</RelativeLayout>